# pre-commit

./: .pre-commit-hooks.yaml  README.md  enforce_named_loggers.py  setup.cfg
