[metadata]
name = launchscience_precommit
version = 1
url = https://github.com/launch-science/pre-commit
author = LaunchScience
author_email = engineering@launchscience.com

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.entry_points]
console_scripts =
    enforce-named-loggers = hooks.enforce_named_loggers:main

[bdist_wheel]
universal = True
